# sensirion-sps-30

./: .clang-format  Makefile  README.md  meson.build
docs/: 20231205_sps30-trace.md  20231209-sps30-trace.md  20231211_sps30-trace.md  sps30_reference.md
src/: meson.build
src/app/: meson.build
src/app/cpp_driver_example/: ea_sensirion_i2c_example.cpp  meson.build  sensirion_i2c_example.cpp
src/app/vendor_example_aardvark/: meson.build  sensirion_hw_i2c_aardvark_implementation.c  sps30_example_usage.c
src/app/vendor_example_aardvark_data_collection/: meson.build  sensirion_hw_i2c_aardvark_implementation.c  sps30_example_usage.c
src/app/vendor_example_simulated/: meson.build
src/driver/: driver.cpp  driver.hpp  meson.build  sps30_i2c_transport.cpp  sps30_test_transport.cpp  sps30_transport.hpp
src/example-app/: meson.build  sensirion_i2c_example.cpp
src/recorded_sensor_data/: meson.build  sps30_recorded_data.c  sps30_recorded_data.h
src/vendor-driver/: sensirion_common.c  sensirion_hw_i2c_implementation_template.c  sps30.c
src/vendor-driver-refactored/: meson.build  sensirion_arch_config.h  sensirion_common.h  sensirion_hw_i2c_aardvark_implementation.c  sensirion_hw_i2c_implementation_template.c  sensirion_i2c.h  sps30.c  sps30.h  sps30_example_usage.c
test/: meson.build  sps30_no_hardware.cpp
test/ea_driver_tests/: meson.build  sps30_no_hardware.cpp
test/recorded_sensor_data/: meson.build  sps30_recorded_data.c  sps30_recorded_data.h
test/refactored_vendor_driver_tests/: meson.build  refactored_vendor_driver_mock.cpp  refactored_vendor_driver_mock.hpp  refactored_vendor_driver_tests.cpp
test/vendor_driver_tests/: meson.build  vendor_driver_mock.cpp  vendor_driver_tests.cpp
