# This is our custom driver implementation.
subdir('driver')
# This is a "close to original" vendor driver, with some
# minor changes made to address warnings.
subdir('vendor-driver')
# This is a refactored version of the vendor driver.
subdir('vendor-driver-refactored')
# This library contains data that was recorded from actual devices.
# It can be used for testing or simulation purposes.
subdir('recorded_sensor_data')
# App must be last, because we depend on the other drivers for our target
subdir('app')
